z-index fix

--- a/css/style.sass
+++ b/css/style.sass
@@ -13,6 +13,7 @@ header, footer, main
 	position: fixed
 	left: 0
 	width: 100%
+	z-index: 100
 
 header, footer
 	height: 10vh
